y.output
Terminals unused in grammar

   _VALUE_NULL


Gramática

    0 $accept: PROGRAMA $end

    1 PROGRAMA: BLOCO_PRINCIPAL

    2 BLOCO_PRINCIPAL: DECLARACOES_GLOBAIS _BEGIN CMDS _END

    3 DECLARACOES_GLOBAIS: VAR DECLARACOES_GLOBAIS
    4                    | FUN DECLARACOES_GLOBAIS
    5                    | /* vazio */

    6 VAR: _VAR DECLARACOES_VARS _END

    7 DECLARACOES_VARS: DECLARACAO_VAR DECLARACOES_VARS
    8                 | /* vazio */

    9 DECLARACAO_VAR: LISTA_IDS ':' TIPOS

   10 LISTA_IDS: _ID ',' LISTA_IDS
   11          | _ID

   12 FUN: _FUNCTION _ID ':' TIPOS CORPO
   13    | _FUNCTION _ID '(' PARAMS ')' ':' TIPOS CORPO
   14    | _FUNCTION _ID '(' PARAMS ')' CORPO

   15 CORPO: VAR CMDS _END
   16      | CMDS _END

   17 PARAMS: DECLARACAO_VAR ',' PARAMS
   18       | DECLARACAO_VAR

   19 LISTA_E: E ',' LISTA_E
   20        | E

   21 CMDS: CMDS CMD
   22     | /* vazio */

   23 CMD: _DO CMDS _END
   24    | CMD_ATRIB
   25    | CMD_SAIDA
   26    | CMD_IF_ELSE
   27    | CMD_FOR
   28    | CMD_WHILE
   29    | CMD_DO_WHILE
   30    | CMD_FUNCTION

   31 CMD_ATRIB: _ID _ATRIBUICAO E
   32          | _ID '[' E ']' _ATRIBUICAO E
   33          | _ID '[' E ']' '[' E ']' _ATRIBUICAO E

   34 CMD_SAIDA: _PRINT '(' E ')'

   35 CMD_IF_ELSE: _IF '(' E ')' _DO CMDS _END
   36            | _IF '(' E ')' _DO CMDS _ELSE CMDS _END

   37 CMD_FOR: _FOR '(' CMD_ATRIB ';' E ';' E ')' _DO CMDS _END

   38 CMD_WHILE: _WHILE '(' E ')' _DO CMDS _END

   39 CMD_DO_WHILE: _DO CMDS _WHILE '(' E ')' _END

   40 CMD_FUNCTION: _ID
   41             | _ID '(' LISTA_E ')'

   42 E: E '+' E
   43  | E '-' E
   44  | E '*' E
   45  | E '/' E
   46  | E '%' E
   47  | E '<' E
   48  | E '>' E
   49  | E _MAIORIGUAL E
   50  | E _MENORIGUAL E
   51  | E _IGUAL E
   52  | E _DIFERENTE E
   53  | E _AND E
   54  | E _OR E
   55  | F

   56 F: _ID
   57  | VALUE
   58  | '(' E ')'
   59  | _NOT F
   60  | '-' F
   61  | '+' F

   62 VALUE: _VALUE_INTEGER
   63      | _VALUE_DOUBLE
   64      | _VALUE_CHAR
   65      | _VALUE_STRING
   66      | _TRUE
   67      | _FALSE

   68 TIPOS: _INTEGER
   69      | _DOUBLE
   70      | _CHAR
   71      | _STRING
   72      | _BOOLEAN
   73      | _ARRAY TIPO_ARRAY _OF _INTEGER
   74      | _ARRAY TIPO_ARRAY _OF _DOUBLE
   75      | _ARRAY TIPO_ARRAY _OF _CHAR
   76      | _ARRAY TIPO_ARRAY _OF _STRING
   77      | _ARRAY TIPO_ARRAY _OF _BOOLEAN
   78      | _ARRAY TIPO_ARRAY TIPO_ARRAY _OF _INTEGER
   79      | _ARRAY TIPO_ARRAY TIPO_ARRAY _OF _DOUBLE
   80      | _ARRAY TIPO_ARRAY TIPO_ARRAY _OF _CHAR
   81      | _ARRAY TIPO_ARRAY TIPO_ARRAY _OF _STRING
   82      | _ARRAY TIPO_ARRAY TIPO_ARRAY _OF _BOOLEAN

   83 TIPO_ARRAY: ARRAY_INTEGER
   84           | ARRAY_DOUBLE
   85           | ARRAY_CHAR
   86           | ARRAY_STRING
   87           | ARRAY_BOOLEAN

   88 ARRAY_INTEGER: '[' _VALUE_INTEGER ':' _VALUE_INTEGER ']'

   89 ARRAY_DOUBLE: '[' _VALUE_DOUBLE ':' _VALUE_DOUBLE ']'

   90 ARRAY_CHAR: '[' _VALUE_CHAR ':' _VALUE_CHAR ']'

   91 ARRAY_STRING: '[' _VALUE_STRING ':' _VALUE_STRING ']'

   92 ARRAY_BOOLEAN: '[' _TRUE ':' _TRUE ']'
   93              | '[' _TRUE ':' _FALSE ']'
   94              | '[' _FALSE ':' _TRUE ']'
   95              | '[' _FALSE ':' _FALSE ']'


Terminais, com as regras onde eles aparecem

$end (0) 0
'%' (37) 46
'(' (40) 13 14 34 35 36 37 38 39 41 58
')' (41) 13 14 34 35 36 37 38 39 41 58
'*' (42) 44
'+' (43) 42 61
',' (44) 10 17 19
'-' (45) 43 60
'/' (47) 45
':' (58) 9 12 13 88 89 90 91 92 93 94 95
';' (59) 37
'<' (60) 47
'>' (62) 48
'[' (91) 32 33 88 89 90 91 92 93 94 95
']' (93) 32 33 88 89 90 91 92 93 94 95
error (256)
_VALUE_NULL (258)
_TRUE (259) 66 92 93 94
_FALSE (260) 67 93 94 95
_VALUE_INTEGER (261) 62 88
_VALUE_DOUBLE (262) 63 89
_VALUE_CHAR (263) 64 90
_VALUE_STRING (264) 65 91
_BEGIN (265) 2
_DO (266) 23 35 36 37 38 39
_END (267) 2 6 15 16 23 35 36 37 38 39
_VAR (268) 6
_INTEGER (269) 68 73 78
_DOUBLE (270) 69 74 79
_CHAR (271) 70 75 80
_STRING (272) 71 76 81
_BOOLEAN (273) 72 77 82
_FUNCTION (274) 12 13 14
_ARRAY (275) 73 74 75 76 77 78 79 80 81 82
_OF (276) 73 74 75 76 77 78 79 80 81 82
_AND (277) 53
_OR (278) 54
_NOT (279) 59
_IF (280) 35 36
_ELSE (281) 36
_FOR (282) 37
_WHILE (283) 38 39
_PRINT (284) 34
_ATRIBUICAO (285) 31 32 33
_MENORIGUAL (286) 50
_MAIORIGUAL (287) 49
_IGUAL (288) 51
_DIFERENTE (289) 52
_ID (290) 10 11 12 13 14 31 32 33 40 41 56


Não-terminais com as regras onde eles aparecem

$accept (50)
    à esquerda: 0
PROGRAMA (51)
    à esquerda: 1, à direita: 0
BLOCO_PRINCIPAL (52)
    à esquerda: 2, à direita: 1
DECLARACOES_GLOBAIS (53)
    à esquerda: 3 4 5, à direita: 2 3 4
VAR (54)
    à esquerda: 6, à direita: 3 15
DECLARACOES_VARS (55)
    à esquerda: 7 8, à direita: 6 7
DECLARACAO_VAR (56)
    à esquerda: 9, à direita: 7 17 18
LISTA_IDS (57)
    à esquerda: 10 11, à direita: 9 10
FUN (58)
    à esquerda: 12 13 14, à direita: 4
CORPO (59)
    à esquerda: 15 16, à direita: 12 13 14
PARAMS (60)
    à esquerda: 17 18, à direita: 13 14 17
LISTA_E (61)
    à esquerda: 19 20, à direita: 19 41
CMDS (62)
    à esquerda: 21 22, à direita: 2 15 16 21 23 35 36 37 38 39
CMD (63)
    à esquerda: 23 24 25 26 27 28 29 30, à direita: 21
CMD_ATRIB (64)
    à esquerda: 31 32 33, à direita: 24 37
CMD_SAIDA (65)
    à esquerda: 34, à direita: 25
CMD_IF_ELSE (66)
    à esquerda: 35 36, à direita: 26
CMD_FOR (67)
    à esquerda: 37, à direita: 27
CMD_WHILE (68)
    à esquerda: 38, à direita: 28
CMD_DO_WHILE (69)
    à esquerda: 39, à direita: 29
CMD_FUNCTION (70)
    à esquerda: 40 41, à direita: 30
E (71)
    à esquerda: 42 43 44 45 46 47 48 49 50 51 52 53 54 55, à direita:
    19 20 31 32 33 34 35 36 37 38 39 42 43 44 45 46 47 48 49 50 51
    52 53 54 58
F (72)
    à esquerda: 56 57 58 59 60 61, à direita: 55 59 60 61
VALUE (73)
    à esquerda: 62 63 64 65 66 67, à direita: 57
TIPOS (74)
    à esquerda: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82, à direita:
    9 12 13
TIPO_ARRAY (75)
    à esquerda: 83 84 85 86 87, à direita: 73 74 75 76 77 78 79 80
    81 82
ARRAY_INTEGER (76)
    à esquerda: 88, à direita: 83
ARRAY_DOUBLE (77)
    à esquerda: 89, à direita: 84
ARRAY_CHAR (78)
    à esquerda: 90, à direita: 85
ARRAY_STRING (79)
    à esquerda: 91, à direita: 86
ARRAY_BOOLEAN (80)
    à esquerda: 92 93 94 95, à direita: 87


estado 0

    0 $accept: . PROGRAMA $end

    _VAR       deslocar, e ir ao estado 1
    _FUNCTION  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 5 (DECLARACOES_GLOBAIS)

    PROGRAMA             ir ao estado 3
    BLOCO_PRINCIPAL      ir ao estado 4
    DECLARACOES_GLOBAIS  ir ao estado 5
    VAR                  ir ao estado 6
    FUN                  ir ao estado 7


estado 1

    6 VAR: _VAR . DECLARACOES_VARS _END

    _ID  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 8 (DECLARACOES_VARS)

    DECLARACOES_VARS  ir ao estado 9
    DECLARACAO_VAR    ir ao estado 10
    LISTA_IDS         ir ao estado 11


estado 2

   12 FUN: _FUNCTION . _ID ':' TIPOS CORPO
   13    | _FUNCTION . _ID '(' PARAMS ')' ':' TIPOS CORPO
   14    | _FUNCTION . _ID '(' PARAMS ')' CORPO

    _ID  deslocar, e ir ao estado 12


estado 3

    0 $accept: PROGRAMA . $end

    $end  deslocar, e ir ao estado 13


estado 4

    1 PROGRAMA: BLOCO_PRINCIPAL .

    $padrão  reduzir usando a regra 1 (PROGRAMA)


estado 5

    2 BLOCO_PRINCIPAL: DECLARACOES_GLOBAIS . _BEGIN CMDS _END

    _BEGIN  deslocar, e ir ao estado 14


estado 6

    3 DECLARACOES_GLOBAIS: VAR . DECLARACOES_GLOBAIS

    _VAR       deslocar, e ir ao estado 1
    _FUNCTION  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 5 (DECLARACOES_GLOBAIS)

    DECLARACOES_GLOBAIS  ir ao estado 15
    VAR                  ir ao estado 6
    FUN                  ir ao estado 7


estado 7

    4 DECLARACOES_GLOBAIS: FUN . DECLARACOES_GLOBAIS

    _VAR       deslocar, e ir ao estado 1
    _FUNCTION  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 5 (DECLARACOES_GLOBAIS)

    DECLARACOES_GLOBAIS  ir ao estado 16
    VAR                  ir ao estado 6
    FUN                  ir ao estado 7


estado 8

   10 LISTA_IDS: _ID . ',' LISTA_IDS
   11          | _ID .

    ','  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 11 (LISTA_IDS)


estado 9

    6 VAR: _VAR DECLARACOES_VARS . _END

    _END  deslocar, e ir ao estado 18


estado 10

    7 DECLARACOES_VARS: DECLARACAO_VAR . DECLARACOES_VARS

    _ID  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 8 (DECLARACOES_VARS)

    DECLARACOES_VARS  ir ao estado 19
    DECLARACAO_VAR    ir ao estado 10
    LISTA_IDS         ir ao estado 11


estado 11

    9 DECLARACAO_VAR: LISTA_IDS . ':' TIPOS

    ':'  deslocar, e ir ao estado 20


estado 12

   12 FUN: _FUNCTION _ID . ':' TIPOS CORPO
   13    | _FUNCTION _ID . '(' PARAMS ')' ':' TIPOS CORPO
   14    | _FUNCTION _ID . '(' PARAMS ')' CORPO

    ':'  deslocar, e ir ao estado 21
    '('  deslocar, e ir ao estado 22


estado 13

    0 $accept: PROGRAMA $end .

    $padrão  aceitar


estado 14

    2 BLOCO_PRINCIPAL: DECLARACOES_GLOBAIS _BEGIN . CMDS _END

    $padrão  reduzir usando a regra 22 (CMDS)

    CMDS  ir ao estado 23


estado 15

    3 DECLARACOES_GLOBAIS: VAR DECLARACOES_GLOBAIS .

    $padrão  reduzir usando a regra 3 (DECLARACOES_GLOBAIS)


estado 16

    4 DECLARACOES_GLOBAIS: FUN DECLARACOES_GLOBAIS .

    $padrão  reduzir usando a regra 4 (DECLARACOES_GLOBAIS)


estado 17

   10 LISTA_IDS: _ID ',' . LISTA_IDS

    _ID  deslocar, e ir ao estado 8

    LISTA_IDS  ir ao estado 24


estado 18

    6 VAR: _VAR DECLARACOES_VARS _END .

    $padrão  reduzir usando a regra 6 (VAR)


estado 19

    7 DECLARACOES_VARS: DECLARACAO_VAR DECLARACOES_VARS .

    $padrão  reduzir usando a regra 7 (DECLARACOES_VARS)


estado 20

    9 DECLARACAO_VAR: LISTA_IDS ':' . TIPOS

    _INTEGER  deslocar, e ir ao estado 25
    _DOUBLE   deslocar, e ir ao estado 26
    _CHAR     deslocar, e ir ao estado 27
    _STRING   deslocar, e ir ao estado 28
    _BOOLEAN  deslocar, e ir ao estado 29
    _ARRAY    deslocar, e ir ao estado 30

    TIPOS  ir ao estado 31


estado 21

   12 FUN: _FUNCTION _ID ':' . TIPOS CORPO

    _INTEGER  deslocar, e ir ao estado 25
    _DOUBLE   deslocar, e ir ao estado 26
    _CHAR     deslocar, e ir ao estado 27
    _STRING   deslocar, e ir ao estado 28
    _BOOLEAN  deslocar, e ir ao estado 29
    _ARRAY    deslocar, e ir ao estado 30

    TIPOS  ir ao estado 32


estado 22

   13 FUN: _FUNCTION _ID '(' . PARAMS ')' ':' TIPOS CORPO
   14    | _FUNCTION _ID '(' . PARAMS ')' CORPO

    _ID  deslocar, e ir ao estado 8

    DECLARACAO_VAR  ir ao estado 33
    LISTA_IDS       ir ao estado 11
    PARAMS          ir ao estado 34


estado 23

    2 BLOCO_PRINCIPAL: DECLARACOES_GLOBAIS _BEGIN CMDS . _END
   21 CMDS: CMDS . CMD

    _DO     deslocar, e ir ao estado 35
    _END    deslocar, e ir ao estado 36
    _IF     deslocar, e ir ao estado 37
    _FOR    deslocar, e ir ao estado 38
    _WHILE  deslocar, e ir ao estado 39
    _PRINT  deslocar, e ir ao estado 40
    _ID     deslocar, e ir ao estado 41

    CMD           ir ao estado 42
    CMD_ATRIB     ir ao estado 43
    CMD_SAIDA     ir ao estado 44
    CMD_IF_ELSE   ir ao estado 45
    CMD_FOR       ir ao estado 46
    CMD_WHILE     ir ao estado 47
    CMD_DO_WHILE  ir ao estado 48
    CMD_FUNCTION  ir ao estado 49


estado 24

   10 LISTA_IDS: _ID ',' LISTA_IDS .

    $padrão  reduzir usando a regra 10 (LISTA_IDS)


estado 25

   68 TIPOS: _INTEGER .

    $padrão  reduzir usando a regra 68 (TIPOS)


estado 26

   69 TIPOS: _DOUBLE .

    $padrão  reduzir usando a regra 69 (TIPOS)


estado 27

   70 TIPOS: _CHAR .

    $padrão  reduzir usando a regra 70 (TIPOS)


estado 28

   71 TIPOS: _STRING .

    $padrão  reduzir usando a regra 71 (TIPOS)


estado 29

   72 TIPOS: _BOOLEAN .

    $padrão  reduzir usando a regra 72 (TIPOS)


estado 30

   73 TIPOS: _ARRAY . TIPO_ARRAY _OF _INTEGER
   74      | _ARRAY . TIPO_ARRAY _OF _DOUBLE
   75      | _ARRAY . TIPO_ARRAY _OF _CHAR
   76      | _ARRAY . TIPO_ARRAY _OF _STRING
   77      | _ARRAY . TIPO_ARRAY _OF _BOOLEAN
   78      | _ARRAY . TIPO_ARRAY TIPO_ARRAY _OF _INTEGER
   79      | _ARRAY . TIPO_ARRAY TIPO_ARRAY _OF _DOUBLE
   80      | _ARRAY . TIPO_ARRAY TIPO_ARRAY _OF _CHAR
   81      | _ARRAY . TIPO_ARRAY TIPO_ARRAY _OF _STRING
   82      | _ARRAY . TIPO_ARRAY TIPO_ARRAY _OF _BOOLEAN

    '['  deslocar, e ir ao estado 50

    TIPO_ARRAY     ir ao estado 51
    ARRAY_INTEGER  ir ao estado 52
    ARRAY_DOUBLE   ir ao estado 53
    ARRAY_CHAR     ir ao estado 54
    ARRAY_STRING   ir ao estado 55
    ARRAY_BOOLEAN  ir ao estado 56


estado 31

    9 DECLARACAO_VAR: LISTA_IDS ':' TIPOS .

    $padrão  reduzir usando a regra 9 (DECLARACAO_VAR)


estado 32

   12 FUN: _FUNCTION _ID ':' TIPOS . CORPO

    _VAR  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 22 (CMDS)

    VAR    ir ao estado 57
    CORPO  ir ao estado 58
    CMDS   ir ao estado 59


estado 33

   17 PARAMS: DECLARACAO_VAR . ',' PARAMS
   18       | DECLARACAO_VAR .

    ','  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 18 (PARAMS)


estado 34

   13 FUN: _FUNCTION _ID '(' PARAMS . ')' ':' TIPOS CORPO
   14    | _FUNCTION _ID '(' PARAMS . ')' CORPO

    ')'  deslocar, e ir ao estado 61


estado 35

   23 CMD: _DO . CMDS _END
   39 CMD_DO_WHILE: _DO . CMDS _WHILE '(' E ')' _END

    $padrão  reduzir usando a regra 22 (CMDS)

    CMDS  ir ao estado 62


estado 36

    2 BLOCO_PRINCIPAL: DECLARACOES_GLOBAIS _BEGIN CMDS _END .

    $padrão  reduzir usando a regra 2 (BLOCO_PRINCIPAL)


estado 37

   35 CMD_IF_ELSE: _IF . '(' E ')' _DO CMDS _END
   36            | _IF . '(' E ')' _DO CMDS _ELSE CMDS _END

    '('  deslocar, e ir ao estado 63


estado 38

   37 CMD_FOR: _FOR . '(' CMD_ATRIB ';' E ';' E ')' _DO CMDS _END

    '('  deslocar, e ir ao estado 64


estado 39

   38 CMD_WHILE: _WHILE . '(' E ')' _DO CMDS _END

    '('  deslocar, e ir ao estado 65


estado 40

   34 CMD_SAIDA: _PRINT . '(' E ')'

    '('  deslocar, e ir ao estado 66


estado 41

   31 CMD_ATRIB: _ID . _ATRIBUICAO E
   32          | _ID . '[' E ']' _ATRIBUICAO E
   33          | _ID . '[' E ']' '[' E ']' _ATRIBUICAO E
   40 CMD_FUNCTION: _ID .
   41             | _ID . '(' LISTA_E ')'

    _ATRIBUICAO  deslocar, e ir ao estado 67
    '('          deslocar, e ir ao estado 68
    '['          deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 40 (CMD_FUNCTION)


estado 42

   21 CMDS: CMDS CMD .

    $padrão  reduzir usando a regra 21 (CMDS)


estado 43

   24 CMD: CMD_ATRIB .

    $padrão  reduzir usando a regra 24 (CMD)


estado 44

   25 CMD: CMD_SAIDA .

    $padrão  reduzir usando a regra 25 (CMD)


estado 45

   26 CMD: CMD_IF_ELSE .

    $padrão  reduzir usando a regra 26 (CMD)


estado 46

   27 CMD: CMD_FOR .

    $padrão  reduzir usando a regra 27 (CMD)


estado 47

   28 CMD: CMD_WHILE .

    $padrão  reduzir usando a regra 28 (CMD)


estado 48

   29 CMD: CMD_DO_WHILE .

    $padrão  reduzir usando a regra 29 (CMD)


estado 49

   30 CMD: CMD_FUNCTION .

    $padrão  reduzir usando a regra 30 (CMD)


estado 50

   88 ARRAY_INTEGER: '[' . _VALUE_INTEGER ':' _VALUE_INTEGER ']'
   89 ARRAY_DOUBLE: '[' . _VALUE_DOUBLE ':' _VALUE_DOUBLE ']'
   90 ARRAY_CHAR: '[' . _VALUE_CHAR ':' _VALUE_CHAR ']'
   91 ARRAY_STRING: '[' . _VALUE_STRING ':' _VALUE_STRING ']'
   92 ARRAY_BOOLEAN: '[' . _TRUE ':' _TRUE ']'
   93              | '[' . _TRUE ':' _FALSE ']'
   94              | '[' . _FALSE ':' _TRUE ']'
   95              | '[' . _FALSE ':' _FALSE ']'

    _TRUE           deslocar, e ir ao estado 70
    _FALSE          deslocar, e ir ao estado 71
    _VALUE_INTEGER  deslocar, e ir ao estado 72
    _VALUE_DOUBLE   deslocar, e ir ao estado 73
    _VALUE_CHAR     deslocar, e ir ao estado 74
    _VALUE_STRING   deslocar, e ir ao estado 75


estado 51

   73 TIPOS: _ARRAY TIPO_ARRAY . _OF _INTEGER
   74      | _ARRAY TIPO_ARRAY . _OF _DOUBLE
   75      | _ARRAY TIPO_ARRAY . _OF _CHAR
   76      | _ARRAY TIPO_ARRAY . _OF _STRING
   77      | _ARRAY TIPO_ARRAY . _OF _BOOLEAN
   78      | _ARRAY TIPO_ARRAY . TIPO_ARRAY _OF _INTEGER
   79      | _ARRAY TIPO_ARRAY . TIPO_ARRAY _OF _DOUBLE
   80      | _ARRAY TIPO_ARRAY . TIPO_ARRAY _OF _CHAR
   81      | _ARRAY TIPO_ARRAY . TIPO_ARRAY _OF _STRING
   82      | _ARRAY TIPO_ARRAY . TIPO_ARRAY _OF _BOOLEAN

    _OF  deslocar, e ir ao estado 76
    '['  deslocar, e ir ao estado 50

    TIPO_ARRAY     ir ao estado 77
    ARRAY_INTEGER  ir ao estado 52
    ARRAY_DOUBLE   ir ao estado 53
    ARRAY_CHAR     ir ao estado 54
    ARRAY_STRING   ir ao estado 55
    ARRAY_BOOLEAN  ir ao estado 56


estado 52

   83 TIPO_ARRAY: ARRAY_INTEGER .

    $padrão  reduzir usando a regra 83 (TIPO_ARRAY)


estado 53

   84 TIPO_ARRAY: ARRAY_DOUBLE .

    $padrão  reduzir usando a regra 84 (TIPO_ARRAY)


estado 54

   85 TIPO_ARRAY: ARRAY_CHAR .

    $padrão  reduzir usando a regra 85 (TIPO_ARRAY)


estado 55

   86 TIPO_ARRAY: ARRAY_STRING .

    $padrão  reduzir usando a regra 86 (TIPO_ARRAY)


estado 56

   87 TIPO_ARRAY: ARRAY_BOOLEAN .

    $padrão  reduzir usando a regra 87 (TIPO_ARRAY)


estado 57

   15 CORPO: VAR . CMDS _END

    $padrão  reduzir usando a regra 22 (CMDS)

    CMDS  ir ao estado 78


estado 58

   12 FUN: _FUNCTION _ID ':' TIPOS CORPO .

    $padrão  reduzir usando a regra 12 (FUN)


estado 59

   16 CORPO: CMDS . _END
   21 CMDS: CMDS . CMD

    _DO     deslocar, e ir ao estado 35
    _END    deslocar, e ir ao estado 79
    _IF     deslocar, e ir ao estado 37
    _FOR    deslocar, e ir ao estado 38
    _WHILE  deslocar, e ir ao estado 39
    _PRINT  deslocar, e ir ao estado 40
    _ID     deslocar, e ir ao estado 41

    CMD           ir ao estado 42
    CMD_ATRIB     ir ao estado 43
    CMD_SAIDA     ir ao estado 44
    CMD_IF_ELSE   ir ao estado 45
    CMD_FOR       ir ao estado 46
    CMD_WHILE     ir ao estado 47
    CMD_DO_WHILE  ir ao estado 48
    CMD_FUNCTION  ir ao estado 49


estado 60

   17 PARAMS: DECLARACAO_VAR ',' . PARAMS

    _ID  deslocar, e ir ao estado 8

    DECLARACAO_VAR  ir ao estado 33
    LISTA_IDS       ir ao estado 11
    PARAMS          ir ao estado 80


estado 61

   13 FUN: _FUNCTION _ID '(' PARAMS ')' . ':' TIPOS CORPO
   14    | _FUNCTION _ID '(' PARAMS ')' . CORPO

    _VAR  deslocar, e ir ao estado 1
    ':'   deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 22 (CMDS)

    VAR    ir ao estado 57
    CORPO  ir ao estado 82
    CMDS   ir ao estado 59


estado 62

   21 CMDS: CMDS . CMD
   23 CMD: _DO CMDS . _END
   39 CMD_DO_WHILE: _DO CMDS . _WHILE '(' E ')' _END

    _DO     deslocar, e ir ao estado 35
    _END    deslocar, e ir ao estado 83
    _IF     deslocar, e ir ao estado 37
    _FOR    deslocar, e ir ao estado 38
    _WHILE  deslocar, e ir ao estado 84
    _PRINT  deslocar, e ir ao estado 40
    _ID     deslocar, e ir ao estado 41

    CMD           ir ao estado 42
    CMD_ATRIB     ir ao estado 43
    CMD_SAIDA     ir ao estado 44
    CMD_IF_ELSE   ir ao estado 45
    CMD_FOR       ir ao estado 46
    CMD_WHILE     ir ao estado 47
    CMD_DO_WHILE  ir ao estado 48
    CMD_FUNCTION  ir ao estado 49


estado 63

   35 CMD_IF_ELSE: _IF '(' . E ')' _DO CMDS _END
   36            | _IF '(' . E ')' _DO CMDS _ELSE CMDS _END

    _TRUE           deslocar, e ir ao estado 85
    _FALSE          deslocar, e ir ao estado 86
    _VALUE_INTEGER  deslocar, e ir ao estado 87
    _VALUE_DOUBLE   deslocar, e ir ao estado 88
    _VALUE_CHAR     deslocar, e ir ao estado 89
    _VALUE_STRING   deslocar, e ir ao estado 90
    _NOT            deslocar, e ir ao estado 91
    _ID             deslocar, e ir ao estado 92
    '+'             deslocar, e ir ao estado 93
    '-'             deslocar, e ir ao estado 94
    '('             deslocar, e ir ao estado 95

    E      ir ao estado 96
    F      ir ao estado 97
    VALUE  ir ao estado 98


estado 64

   37 CMD_FOR: _FOR '(' . CMD_ATRIB ';' E ';' E ')' _DO CMDS _END

    _ID  deslocar, e ir ao estado 99

    CMD_ATRIB  ir ao estado 100


estado 65

   38 CMD_WHILE: _WHILE '(' . E ')' _DO CMDS _END

    _TRUE           deslocar, e ir ao estado 85
    _FALSE          deslocar, e ir ao estado 86
    _VALUE_INTEGER  deslocar, e ir ao estado 87
    _VALUE_DOUBLE   deslocar, e ir ao estado 88
    _VALUE_CHAR     deslocar, e ir ao estado 89
    _VALUE_STRING   deslocar, e ir ao estado 90
    _NOT            deslocar, e ir ao estado 91
    _ID             deslocar, e ir ao estado 92
    '+'             deslocar, e ir ao estado 93
    '-'             deslocar, e ir ao estado 94
    '('             deslocar, e ir ao estado 95

    E      ir ao estado 101
    F      ir ao estado 97
    VALUE  ir ao estado 98


estado 66

   34 CMD_SAIDA: _PRINT '(' . E ')'

    _TRUE           deslocar, e ir ao estado 85
    _FALSE          deslocar, e ir ao estado 86
    _VALUE_INTEGER  deslocar, e ir ao estado 87
    _VALUE_DOUBLE   deslocar, e ir ao estado 88
    _VALUE_CHAR     deslocar, e ir ao estado 89
    _VALUE_STRING   deslocar, e ir ao estado 90
    _NOT            deslocar, e ir ao estado 91
    _ID             deslocar, e ir ao estado 92
    '+'             deslocar, e ir ao estado 93
    '-'             deslocar, e ir ao estado 94
    '('             deslocar, e ir ao estado 95

    E      ir ao estado 102
    F      ir ao estado 97
    VALUE  ir ao estado 98


estado 67

   31 CMD_ATRIB: _ID _ATRIBUICAO . E

    _TRUE           deslocar, e ir ao estado 85
    _FALSE          deslocar, e ir ao estado 86
    _VALUE_INTEGER  deslocar, e ir ao estado 87
    _VALUE_DOUBLE   deslocar, e ir ao estado 88
    _VALUE_CHAR     deslocar, e ir ao estado 89
    _VALUE_STRING   deslocar, e ir ao estado 90
    _NOT            deslocar, e ir ao estado 91
    _ID             deslocar, e ir ao estado 92
    '+'             deslocar, e ir ao estado 93
    '-'             deslocar, e ir ao estado 94
    '('             deslocar, e ir ao estado 95

    E      ir ao estado 103
    F      ir ao estado 97
    VALUE  ir ao estado 98


estado 68

   41 CMD_FUNCTION: _ID '(' . LISTA_E ')'

    _TRUE           deslocar, e ir ao estado 85
    _FALSE          deslocar, e ir ao estado 86
    _VALUE_INTEGER  deslocar, e ir ao estado 87
    _VALUE_DOUBLE   deslocar, e ir ao estado 88
    _VALUE_CHAR     deslocar, e ir ao estado 89
    _VALUE_STRING   deslocar, e ir ao estado 90
    _NOT            deslocar, e ir ao estado 91
    _ID             deslocar, e ir ao estado 92
    '+'             deslocar, e ir ao estado 93
    '-'             deslocar, e ir ao estado 94
    '('             deslocar, e ir ao estado 95

    LISTA_E  ir ao estado 104
    E        ir ao estado 105
    F        ir ao estado 97
    VALUE    ir ao estado 98


estado 69

   32 CMD_ATRIB: _ID '[' . E ']' _ATRIBUICAO E
   33          | _ID '[' . E ']' '[' E ']' _ATRIBUICAO E

    _TRUE           deslocar, e ir ao estado 85
    _FALSE          deslocar, e ir ao estado 86
    _VALUE_INTEGER  deslocar, e ir ao estado 87
    _VALUE_DOUBLE   deslocar, e ir ao estado 88
    _VALUE_CHAR     deslocar, e ir ao estado 89
    _VALUE_STRING   deslocar, e ir ao estado 90
    _NOT            deslocar, e ir ao estado 91
    _ID             deslocar, e ir ao estado 92
    '+'             deslocar, e ir ao estado 93
    '-'             deslocar, e ir ao estado 94
    '('             deslocar, e ir ao estado 95

    E      ir ao estado 106
    F      ir ao estado 97
    VALUE  ir ao estado 98


estado 70

   92 ARRAY_BOOLEAN: '[' _TRUE . ':' _TRUE ']'
   93              | '[' _TRUE . ':' _FALSE ']'

    ':'  deslocar, e ir ao estado 107


estado 71

   94 ARRAY_BOOLEAN: '[' _FALSE . ':' _TRUE ']'
   95              | '[' _FALSE . ':' _FALSE ']'

    ':'  deslocar, e ir ao estado 108


estado 72

   88 ARRAY_INTEGER: '[' _VALUE_INTEGER . ':' _VALUE_INTEGER ']'

    ':'  deslocar, e ir ao estado 109


estado 73

   89 ARRAY_DOUBLE: '[' _VALUE_DOUBLE . ':' _VALUE_DOUBLE ']'

    ':'  deslocar, e ir ao estado 110


estado 74

   90 ARRAY_CHAR: '[' _VALUE_CHAR . ':' _VALUE_CHAR ']'

    ':'  deslocar, e ir ao estado 111


estado 75

   91 ARRAY_STRING: '[' _VALUE_STRING . ':' _VALUE_STRING ']'

    ':'  deslocar, e ir ao estado 112


estado 76

   73 TIPOS: _ARRAY TIPO_ARRAY _OF . _INTEGER
   74      | _ARRAY TIPO_ARRAY _OF . _DOUBLE
   75      | _ARRAY TIPO_ARRAY _OF . _CHAR
   76      | _ARRAY TIPO_ARRAY _OF . _STRING
   77      | _ARRAY TIPO_ARRAY _OF . _BOOLEAN

    _INTEGER  deslocar, e ir ao estado 113
    _DOUBLE   deslocar, e ir ao estado 114
    _CHAR     deslocar, e ir ao estado 115
    _STRING   deslocar, e ir ao estado 116
    _BOOLEAN  deslocar, e ir ao estado 117


estado 77
